@@ -589,17 +589,461 @@ public class CHMInitialization {
         }
     }
 }
+
+public class ImmutableObject {
+    WeakHeapMap<ImmutableObject, ImmutableObject> map = new WeakHeapMap();
+
+    public ImmutableObject canonicalVersion(ImmutableObject io) {
+        synchronized(map) {
+            ImmutableObject canonicalVersion = map.get(io);
+            if (canonicalVersion == null) {
+                map.put(io, io);
+                canonicalVersion = io;
+            }
+            return canonicalVersion;
+        }
+    }
+}
+```
+
+자바에서는 많은 객체 타입이 불변이다. 여기에는 대응하는 기본형--`Integer`,
+ `Double`, `Boolean` 등뿐만 아니라 `BigDecimal`과 같이 숫자 기반 타입인 객체들이
+ 포함된다. 문자열 연결을 너무 많이 하는 경우 주의할 점은 연결된 문자의 테이블이
+ 네이티브 메모리 내에 구성된 고정 크기 해시 테이블이라는 것이다. 자바 7u40 이전
+ 릴리즈에서 테이블의 디폴트 크기는 1,009버킷이다. 자바 7u40의 64but와 그 이후의
+ 버전에서 디폴트 크기는 60,013이다. 자바 7을 시작으로 이 테이블의 크기는
+ `-XX:StringTableSize=N` 플래그를 사용해서 JVM을 시작할 때 설정할 수 있다.
+ 문자열 테이블이 실행되는 방법을 알려면 `-XX:+PrintStringTableStatistics`
+ 인자(JDK 7u6이나 이후의 버전이 필요)를 넣고 애플리케이션을 실행시키자. JVM이
+ 종료할 때 다음과 같은 표를 출력할 것이다. 애플리케이션이 할당한 연결 문자열의
+ 개수(와 이들의 총 크기)는 `jmap -heap process_id` 명령어를 사용해서 얻을 수도
+ 있다(이건 JDK 7u6이나 이후 버전이 필요하다). 문자열 테이블을 너무 크게 설정하는
+ 데 따른 불이익은 사소하다.<br>
+`String.equals()` 메서드는 꽤 빠르다.
+
+주로 객체 재사용을 하는 방법에는 객체 풀과 스레드-로컬 변수 두 가지 있다. 이
+ 기술 중 어느 것이든 GC의 효율성을 해치기 때문에 지금 전 세계의 GC 엔지니어는
+ 신음하고 있다.<br>
+다음은 JDK와 자바 EE 재사용 객체가 있는 (그리고 왜 쓰는지에 대한) 예제다. 스레드
+ 풀, JDBC 풀, EJB 풀, 큰 배열 (자바에서는 배열이 할당될 때 배열 내의 개별적인
+ 엘리먼트 전부가 특정 디폴트 값(널, 0이나 `false` 중 적절한 값)으로 초기화되어야
+ 한다.), 네이티브 NIO 버퍼 (직접 `java.nio.Buffer`(즉 `allocateDirect()`
+ 메서드를 호출해서 반환되는 버퍼)를 할당하는 동작은 버퍼의 크기에 상관없이
+ 비용이 비싸다. 큰 버퍼 한 개를 생성해서 필요한 만큼 영역을 나눠서 관리하고
+ 향후의 동작에서 재사용하도록 반환하는 편이 더 낫다.), 보안 클래스
+ (`MessageDigest`, `Signature`와 다른 보안 알고리즘의 인스턴스는 초기화하는
+ 비용이 비싸다.), 문자열 인코더와 디코더 객체, `StringBuilder` 헬퍼, 난수 생성기
+ (`Random`과 특히 `SecureRandom` 클래스의 인스턴스는 시드 값을 입력해서 수열을
+ 생성하는 비용이 많이 든다.), DNS 룩업에서 얻은 이름, ZIP 인코더와 디코더
+ (흥미로운 반전은 이들을 초기화하는 비용이 비싸지 않다는 점이다. 하지만 반드시
+ 이들이 사용하는 네이티브 메모리도 해제하기 위해 객체 종결(finalization) 처리를
+ 필요로 하므로 해제하는 데 비용이 많이 든다.)<br>
+스레드-로컬 객체의 성능상의 이점은 때로 (객체 재사용으로 아끼기보다) 동기화
+ 비용을 아끼는 측면에서 드러나므로 동기화는 흥미로운 점을 환시기킨다. 예를 들어
+ 자바 7은 `ThreadLocalRandom` 클래스를 도입했다.<br>
+막연한 참조를 많이 사용하는 애플리케이션을 실행시킬 때 `-XX:+PrintReferenceGC`
+ 플래그 추가를 고려하자. 이 플래그는 참조를 처리하는 데 시간이 얼마나 걸리는지
+ 볼 수 있게 해준다.<br>
+소프트 참조는 기본적으로 가장 최근에 사용된(LRU) 객체 정보를 담고 있는 하나의 큰
+ 풀이다. 방정식은 다음 슈도 코드와 같다. long ms = SoftRefLRUPolicyMSPerMS *
+ AmountOfFreeMemoryInMB; if (now - last_access_to_reference > ms) free the
+ reference. 첫 번째느 `-XX:SoftRefLRUPolicyMSPerMB=N` 플래그에 의해 설정되며
+ 디폴트 값은 1,000이다. 두 번째 값은 (GC 주기가 완료된 후) 힙 내 자유 메모리의
+ 양이다. 서버 컴파일러는 힙의 최대 가용 크기를 사용하는 반면 클라이언트
+ 컴파일러는 현재 힙 내에서 이용 가능한 메모리에 대한 값을 기반으로 한다. 소프트
+ 참조는 객체의 수가 너무 크지 않을 때 잘 동작한다. 그 외에는 LRU 캐시로 구현되며
+ 한정된 크기를 가진 더욱 전통적인 형태의 객체 풀을 고려하도록 하자.<br>
+약한 참조는 여러 개의 스레드가 문제의 참조 대상을 동시에 사용할 때 이용해야
+ 한다. 그렇지 않으면 약한 참조는 가비지 컬렉터에 의해 반환될 가능성이 너무 크다.
+ 약하게 참조만 된 객체는 GC 주기마다 반환된다. 강한 참조가 제거될 때 약한 참조는
+ 바로 해제된다.<br>
+파이널라이저(Finalizer)는 기능적인 이유에서 나쁘며 성능에서도 나쁘다.
+ 파이널라이저는 사실 막연한 참조의 특별한 경우다. JVM은 `finalize()` 메서드를
+ 정의한 객체를 추적하기 위해 프라이빗 참조 클래스(`java.lang.ref.Finalizer`,
+ `java.lang.ref.Fina` 참조)를 이용한다. 적어도 이 문제의 일부를 회피하는
+ 파이널라이저를 사용한다는 대안이 있으며, 특히 일반 GC 동작 동안 참조 대상이
+ 해제되게 할 수 있다. 이건 함축적으로 `Finalizer` 참조를 사용하는 게 아니라
+ 단순히 다른 종류의 무제한 참조를 사용해서 이뤄진다. 여러분은
+ `jcmd process_id GC.run_finalization` 명령어를 사용하여 파이널라이저 큐가
+ 처리되게 할 수 있다. 애플리케이션에 대한 이슈인지 확신하고자 파이널라이저 큐를
+ 모니터링하려면 `jconsole`의 VM 서머리 탭(Summary tab)에서 (실시간으로 갱신되는)
+ 그 크기를 살펴보자. `jmap -finalizerinfo process_id` 명령어를 실행시키면
+ 스크립트들이 그 정보를 모을 수 있다.
+
+```java
+private static class CleanupFinalizer extends WeakReference {
+    private static ReferenceQueue<CleanupFinalizer> finRefQueue;
+    private static HashSet<CleanupFinalizer> pendingRefs = new HashSet<>();
+
+    private boolean closed = false;
+
+    public CleanupFinalizer(Object o) {
+        super(o, finRefQueue);
+        allocateNative();
+        pendingRefs.add(this);
+    }
+
+    public void setClosed() {
+        closed = true;
+        doNativeCleanup();
+    }
+
+    public void cleanup() {
+        if (!closed) {
+            doNativeCleanup();
+        }
+    }
+
+    private native void allocateNative();
+    private native void doNativeCleanup();
+
+    static {
+        finRefQueue = new ReferenceQueue<>();
+        Runnable r = new Runnable() {
+            public void run() {
+                CleanupFinalizer fr;
+                while (true) {
+                    try {
+                        fr = (CleanupFinalizer) finRefQueue.remove();
+                        fr.cleanup();
+                        pendingRefs.remove(fr);
+                    } catch (Exception ex) {
+                        Logger.getLogger(CleanupFinalizer.class.getName()).
+                               log(Level.SEVERE, null, ex);
+                    }
+                }
+            }
+        };
+        Thread t = new Thread(r);
+        t.setDaemon(true);
+        t.start();
+    }
+}
+
+public class CleanupExample {
+    private CleanupFinalizer cf;
+    private HashMap data = new HashMap();
+
+    public CleanupExample() {
+        cf = new CleanupFinalizer(this);
+    }
+
+    // ...methods to put things into the hashmap...
+
+    public void close() {
+        data = null;
+        cf.setClosed();
+    }
+}
 ```
 
 ## 8. 네이티브 메모리 베스트 프랙티스
 
+최근의 리눅스 커널에서 PSS는 RSS(resident set size)를 개선한 것으로, 다른
+ 프로그램에 의해 공유된 데이터를 제외한다. 윈도우 시스템에서 동일한 개념은
+ 애플리케이션의 작업 세트(working set)라고 불리며 이 정보는 작업 관리자(task
+ manager)가 보고한다.<br>
+다이렉트 바이트 버퍼에 할당할 수 있는 메모리의 총 크기는
+ `-XX:MaxDirectMemorySize=N` 플래그를 설정해서 명시한다. 자바 7을 시작으로 이
+ 플래그의 디폴트 값은 0이며 이건 무제한이라는 의미다 (이전에는 64MB).<br>
+자바 8부터 JVM은 `-XX:NativeMemoryTracking=off|sumamry|detail` 옵션을 사용해서
+ 네이티브 메모리를 할당하는 방법에 대한 가시성을 일부 제공한다. 기본적으로
+ 네이티브 메모리 추적기(Native Memory Tracking, NMT)는 꺼져있다. 요약이나 상세
+ 모드가 활성화되어 있으면 `jcmd process_id VM.native_memory summary`를 써서
+ 언제든지 네이티브 메모리 정보를 얻을 수 있다. JVM이 `-XX:+PrintNMTStatistics`
+ 인자를 넣고 시작했다면 JVM은 프로그램이 끝날 때 할당에 대한 정보를 출력할
+ 것이다. NMT도 시간이 지남에 따라 메모리 할당이 일어나는 방식을 추적할 수 있게
+ 해준다. NMT가 활성화되게 설정하여 JVM을 시작한 후
+ `jcmd process_id VM.native_memory baseline` 명령어를 사용해서 메모리 사용량에
+ 대한 기준점을 설정할 수 있다. 이건 JVM이 현재의 메모리 할당 정보를 표시하게
+ 한다. 이후 이 내용과 현재의 메모리 사용량을 비교할 수 있다.
+ `jcmd process_id VM.native_memory summary.diff`<br>
+`echo always > /sys/kernel/mm/transparent_hugepage/enabled`. 이 명료한 거대
+ 페이지를 사용할 수 있으면 `-XX:+UseLargePages` 플래그를 명시하지 말자. /
+ 마이크로소프트 관리 센터(Microsoft Management Center, `mmc`)를 시작하자. 스냅인
+ 추가/제거 → 그룹 정책 개체 편집기 → 로컬 컴퓨터 정책 → 컴퓨터 구성 → Windows
+ 설정 → 보안 설정 → 로컬 정책 → 사용자 권한 할당 → 메모리에 페이지 잠금 →
+ 사용자나 그룹을 추가하고 재부팅<br>
+"oop"란 일반 객체 포인터(ordinary object pointer)를 나타낸다. oop는 JVM이 객체
+ 참조로 사용하는 핸들이다. 35bit oop가 있다면 어떨까? 그렇지만 대신 JVM은 참조의
+ 마지막 3bit는 모두 0이라고 가정할 수 있다. 이로 인해 JVM은 힙 내에서 32bit만
+ 쓰면서 32GB의 메모리를 참조할 수 있는 포인터를 갖게 된다. 첫 번째 4GB와 32GB
+ 사이에 있는 힙에서는 압축 oop를 쓰자. 압축 oop는 `-XX:+UseCompressedOops`
+ 플래그를 써서 활성화시킨다. 자바 7과 이후 버전에서 최대 힙 크기가 32GB보다
+ 작으면 디폴트로 사용할 수 있다. 두번째로 31GB 힙과 압축 oop를 사용하는
+ 프로그램은 보통 33GB 힙을 쓰는 프로그램보다 더 빠를 것이다. 객체 참조가 평균
+ 힙의 20%를 사용한다고 감안해서 처음에는 적어도 38GB로 계획을 세우는 편이 좋다.
+
 ## 9. 스레딩과 동기화 성능
+
+(자바 API에 `ThreadPoolExecutor`가 추가된 시기보다 앞서 출시됐으므로) 사실
+ 대부분은 자체 스레드 풀을 만들어서 쓰고 있지만, 일부 자바 EE 애플리케이션
+ 서버는 작업을 관리하기 위해 `ThreadPoolExecutor` 클래스의 인스턴스를 사용하기도
+ 한다. 대부분의 애플리케이션 서버가 최소와 유사한 용어(예, `MinThreads`)를
+ 사용하는 반면 `ThreadPoolExecutor`와 연관 클래스는 스레드의 최대 수를 핵심 풀
+ 크기(core pool size)라고 표시한다. 하지만 `ThreadPoolExecutor`가 풀의 크기를
+ 재조정하는 시기를 결정하는 방법고 대부분의 자바 EE 애플리케이션 서버가 풀의
+ 크기를 재조정하는 시기를 결정하는 방법에는 주요 차이점이 있다.<br>
+스레드 풀은 대개 보류 중인 일의 양과 머신에서 사용할 수 있는 CPU의 개수에 대한
+ 가시성을 갖고 있지만, 이들이 실행되고 있는 전체 환경 측면에서의 가시성은 없다.
+ 그러므로 직접 스레드 풀을 튜닝할 때(뿐만 아니라 `ThreadPoolExecutor`의 특정
+ 설정)의 주요 기능으로 작업이 보류되고 있을 때 스레드를 추가하는 것은 명확하게
+ 잘못된 일이다. 불행하게도 이건 스레드 풀의 최대 크기를 설정하는 것이 흔히
+ 과학적이기보다 예술적인 일에 더 가까운 이유기도 하다.<br>
+거의 모든 경우에 최대 값과 동일한 값으로 스레드의 최소 개수를 설정하자.<br>
+큐 제한에 이르면 큐에 태스트를 추가하려는 시도는 실패할 것이다.
+ `ThreadPoolExecutor`에는 이런 경우를 제어하는 `rejectedExecution`
+ 메서드(디폴트로 `RejectedExecutionException`를 던진다)가 있다.
+ (`SynchronousQueue`) 태스크가 도착했을 때 최대 개수의 스레드가 이미 작업
+ 중이라면 태스크는 거부된다. (`LinkedBlockingQueue`) 무한 큐를 사용할 때
+ 거부되는 태스크는 없을 것이다. (`ArrayBlockingQueue`) 추가 스레드는 큐가 가득
+ 찼을 때만 시작된다.<br>
+자바 7은 (재귀적인 불할 정복 알고리즘을 위한) `ForkJoinPool` 클래스라는 새로운
+ 스레드 풀을 도입한다. 부모 태스크는 자식 태스크가 완료될 때까지 대기해야만
+ 하므로 `ThreadPoolExecutor`를 사용해서 효율적으로 알고리즘을 수행하기란
+ 불가능하다. 반면에 `ForkJoinPool`은 스레드가 신규 태스크를 생성하고 현재의
+ 태스크를 대기시키도록 한다. 여기서 (`RecursiveTask<T>`의) `fork()`와 `join()`
+ 메서드가 핵심이다. `ForkJoinPool`의 추가 기능은 작업 훔쳐오기(work-stealing)를
+ 구현한 것이다. 스레드는 자체 큐에서 나온 태스크를 우선적으로 작업하지만 큐가
+ 비어있다면 다른 스레드의 큐에서 나온 태스크를 훔칠 것이다. `ForkJoinPool`은
+ 태스크가 불균형을 이룰 때 (`ThreadPoolExecutor`보다) 더 나은 성능을
+ 제공한다.<br>
+(자바의 현재 버전은 배열 크기가 47개 미만의 요소를 가질 때 삽입 정렬을
+ 사용한다.)<br>
+자바 8은 특정 종류의 코드를 자동으로 병렬화시키는 기능을 도입했다. 이 병렬화는
+ `ForkJoinPool` 클래스의 기능에 의존한다. 공유 풀 크기는 시스템 속성
+ `-Djava.util.concurrent.ForkJoinPool.common.parallelism=N`에 명시해서 설정할 수
+ 있다. 공유 풀이 단일 스레드만 쓰도록 설정되었다 해도 `forEach()` 메서드는
+ 결과를 계상하는 데 두 개의 스레드(문장을 실행하는 스레드와 스크림에서 유래된
+ 데이터를 처리하기 위한 공유 풀 내의 스레드)를 사용한다.
+
+```java
+public class Termometer {
+    private static ThreadLocal<NumberFormat> nfLocal = new ThreadLocal<>() {
+        public NumberFormat initialValue() {
+            NumberFormat nf = NumberFormat.getInstance();
+            nf.setMinimumIntegerDigits(2);
+            return nf;
+        }
+    }
+    public String toString() {
+        NumberFormat nf = nfLocal.get();
+        nf.format(...);
+    }
+}
+```
+
+`java.util.concurrent.atomic` 패키지 내의 클래스는 전통적인동기화 대신 CAS 기반
+ 기본형을 사용한다. 결과적으로 이 클래스들(예를 들어 `AtomicLong` 클래스)의
+ 성능은 적어도 CAS 기본형에 대한 경쟁이 너무 높아지기 전까지는 long 변수를
+ 증가시키기 위해 동기화된 메서드를 쓰는 것보다 더 빠른 경향이 있다. 자바 8은
+ 이걸 다루기 위해 원자 단위 가산기(adders)와 누산기(accumulators)와 같은 다수의
+ 클래스(예를 들어 `LongAdder` 클래스)를 도입한다. 이 클래스는 전통적인 원자 단위
+ 클래스보다 확장성이 더 높다.<br>
+엄밀히 말해서 거짓 공유(False Sharing)에는 동기화된(또는 `volatile`) 변수를
+ 포함시킬 필요가 없다. CPU 캐시 내에 데이터 값을 쓸 때마다 동일한 데이터 범위를
+ 유지하는 다른 캐시는 무효화돼야 한다. (JVM이 인터슽너 변수의 배치를 재정리해서
+ 모든 배열은 서로 이웃하게 놓이고 모든 `long`형 변수도 서로 인접하게 된다.) 자바
+ 8의 신규 기능 중 하나는 특정 필드에서 캐시 경쟁을 줄일 수 있다(JEP 142)는
+ 점이다. 이건 JVM이 자동으로 패딩해야 하는 변수를 표시하기 위해 신규
+ 어노테이션(`@sun.misc.Contended`)을 쓰면 된다. 기본적으로 JVM은 JDK의 클래스
+ 내를 제외하고 이 어노테이션을 무시한다. 애플리케이션 코드에서 이 어노테이션을
+ 사용할 수 있게 하려면 디폴트가 `true`인 `-XX:-RestrictContended` 플래그를
+ 포함시키자. 반면에 JDK 내에서 일어나는 자동 패딩을 비활성화시키려면 디폴트가
+ `true`인 `-XX:-EnabledContended` 플래그를 설정하자. 이건 `Thread`와
+ `ConcurrentHashMap` 클래스의 크기 감소로 이어질 것이다.
+
+대개 많은 애플리케이션은 실제로 32bit JVM 내에서는 128KB 스택 크기로, 64bit JVM
+ 내에서는 256KB 스택 크기로 실행할 수 있다. (기본 스택 크기 - 32bit 320~512KB,
+ 64bit 1MB)<br>
+대부분의 애플리케이션을 포함하여 스레드 풀을 사용하는 애플리케이션은 편향된 락이
+ 유효하면 보통 성능이 나빠진다. 프로그래밍 모델에서 다른 스레드들이 동일하게
+ 경쟁하는 락에 접근할 가능성이 있다. 이런 종류의 애플리케이션에서는
+ `-XX:-UseBiasedLocking` 옵션을 써서 편향된 락을 비활성화시키면 성능이 약간
+ 개선될 수도 있다.<br>
+락에 접근하다 차단된 스레드를 알림을 받을 큐에 귀속시키기 전에 스핀을 돌 횟수를
+ 자동 조정하며 JVM은 이 두 가지 경우의 사이에서 적절하게 균형을 맞출 것이다.
+ 자바의 이전 버전에서는 스핀 락을 활성화하거나 비활성화하는 플래그로
+ `-XX:+UseSpinning`를 지원했었다. 자바 7과 그 이상의 버전에서 이 플래그는 더
+ 이상 효과가 없다. 스핀 락의 사용은 비활성화시킬 수 없다. 좀 이상하지만 스피닝이
+ 항상 동작을 하더라도 이 플래그의 디폴트 값은 `false`로 알려져 있다.<br>
+유닉스 기반 시스템에서는 스레드의 자바 레벨 우선순위에는 영향이 거의 없고 전체
+ 우선순위에 대한 계산은 스레드가 마지막으로 실행된 후의 기간에 따라 좌우된다.
+ 윈도우에서는 더 높은 자바 우선순위를 가진 스레드가 더 낮은 우선순위를 가진
+ 스레드보다 더 많이 실행되는 경향이 있지만 우선순위가 낮은 스레드라 해도 꽤 많은
+ CPU 시간을 쓴다. 어느 경우에나 스레드의 우선순위로는 성능에 영향을 줄 수 없다.
+ 일부 태스크가 다른 태스크보다 더 중요하다면 애플리케이션 로직에서 이들의
+ 우선순위를 정하게 해야 한다. (어느 범위까지) 이걸 가능하게 하는 방법은 태스크에
+ 다른 스레드 풀을 할당하고 풀의 크기를 변경하는 것이다.<br>
+스레드 스택을 살펴보는 데 있어 첫 번째 경고 사항은 JVM이 특정 지역
+ 세이프포인트(safepoints)에서 스레드의 스택 덤프만 뜰 수 있다는 점이다. 두
+ 번째로 스택은 한 번에 각 스레드별로 덤프를 뜨기 때문에 이들로부터 얻은 정보가
+ 상충될 가능성이 있다. 스레드 두 개가 동일한 스택을 보유하거나 스레드가 아무
+ 스레드도 잡고 있지 않은 락을 기다리며 대기하고 있는 것처럼 보일 수 있다.<br>
+이 책의 [온라인 예제][parsejstack]에는 한 개 이상의 스레드 덤프에서 모든
+ 스레드의 상태를 요약할 수 있는 `jstack` 출력물을 위한 기본적인 파서를 갖고
+ 있다.
+
+[parsejstack]: https://github.com/ScottOaks/JavaPerformanceTuning/tree/master/JStack
 
 ## 10. 자바 엔터프라이즈 에디션 성능
 
+세션에 할당된 상태 유지 빈은 EJB 풀 내에 없다.<br>
+XML과 JSON 중 어떤 표현 방식을 쓰든 전송될 때 압축하면 큰 이익을 얻을 수 있고
+ 크기도 비슷해진다.<br>
+SAX (푸시) 파서는 StAX (풀) 파서보다 더 빠른 경향이 있다.<br>
+사용할 팩토리를 정하기 위해 순서대로 `javax.xml.stream.XMLInputFactory` 옵션을
+ 살펴본다. `-D` → JAVA/jre/lib/jaxp.properties → META-INF/services/ → JDL 기본
+ 팩토리
+
+```java
+SAXParserFactory spf = SAXParserFactory.newInstance();
+spf.setValidating(true);
+spf.setNamespaceAware(true);
+SAXParser parser = spf.newSAXParser();
+parser.setProperty(JAXPConstants.JAXP_SCHEMA_LANGUAGE,
+       XMLConstants.W3C_XML_SCHEMA_NS_URI);
+XMLReader xr = parser.getXMLReader();
+xr.setErrorHandler(new MyCustomErrorHandler());
+
+// 스키마 객체 재사용 - 스키마 객체를 파서 팩토리와 같이 사용
+SchemaFactory sf = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
+StreamSource ss = new StreamSource(rp.getSchemaFilename());
+Schema schema = sf.newSchema(new Source[]{ss});
+SAXParserFactory spf = SAXParserFactory.newInstance();
+spf.setValidating(false); // setSchema()와 setValidating() 메서드는 상호 배타적
+spf.setNamespaceAware(true);
+spf.setSchema(schema);
+parser = spf.newSAXParser();
+
+// 스키마 객체 재활용 - Validator 클래스의 인스턴스 사용
+//  파싱을 검증과 분리시켜서 두 가지 동작을 다른 시기에 수행할 수 있도록 한다.
+SchemaFactory sf = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
+StreamSource ss = new StreamSource(rp.getSchemaFilename());
+Schema schema = sf.newSchema(new Source[]{ss});
+XMLInputFactory staxFactory = XMLInputFactory.newInstance();
+staxFactory.setProperty(XMLInputFactory.IS_VALIDATING, Boolean.FALSE);
+XMLStreamRedaer xsr = staxFactory.createXMLStreamReader(ins);
+XMLStreamReader reader = new MyXMLStreamReader(xsr);
+Validator validator = schema.newValidator();
+validator.validate(new StAXSource(reader));
+```
+
+최적화 코드에서 배열이 역직렬화될 때 결국 JFK 참조는 개별적인 다른 객체가 됨을
+ 주의하자.
+
 ## 11. 데이터베이스 성능 베스트 프랙티스
 
+JDBC 드라이버는 자바 애플리케이션(데이터베이스 클라이언트) 내 또는 데이터베이스
+ 서버에서 작업을 더 많이 수행하도록 만들어질 수 있다. 여기에 대한 최고의 예제는
+ 오라클 데이터베이스의 thin과 thick 드라이버다. thin 드라이버는 자바
+ 애플리케이션 내에서 꽤 적은 공간을 차지하도록 만들어졌다. 이건 데이터베이스
+ 서버가 처리를 더 많이 하도록 한다. thick 드라이버는 반대다.<br>
+JDBC 드라이버는 네 가지 타입(1~4)이 있다. 오늘날 널리 쓰이는 드라이버 타입은
+ (네이티브 코드를 사용하는) 타입 2와 (순수 자바인) 타입 4다. 타입 1 드라이버는
+ ODBC와 JDBC 간의 가교 역할을 한다. 타입 1 드라이버는 보통 성능이 그다지 좋지
+ 않으므로 가능한 한 ODBC를 피하는 편이 좋다. 타입 4 드라이버와 같이 타입 3
+ 드라이버는 순수하게 자바로만 작성되나 일부 미들웨어(일반적이진 않지만 때론
+ 애플리케이션 서버)가 중간 번역을 제공하는 특정 구조를 위해 설계된다.<br>
+원격 JDBC 호출 한 번에 전송 - `ps.addBatch()` → `ps.executeBatch()`<br>
+트랜잭션 분리 모드:
+* `TRANSACTION_SERIALIZABLE` - 이건 가장 비용이 비싼 트랜잭션 모드다. 직렬화된
+  트랜잭션은 쿼리를 입력할 때마다 항상 동일한 데이터를 보게 될 것이다.
+* `TRANSACTION_REPEATABLE_READ` - 이건 트랜잭션 동안 모든 데이터가 락으로 잠길
+  필요가 있다. 하지만 다른 트랜잭션은 언제든 테이블로 새로운 데이터를 생성할 수
+  있다. 이 모드는 팬텀 읽기가 일어나게 하며 WHERE절이 있는 쿼리를 재수행하면
+  트랜잭션 내에서 쿼리가 두 번째 수행될 때 다른 데이터가 조회될 수 있다. (MySQL
+  디폴트, 오라클 미지원)
+* `TRANSACTION_READ_COMMITTED` - 이 모드는 트랜잭션이 일어나는 동안 쓰인 열
+  하나만 락으로 잠근다. 이건 반복 불가능 읽기(nonrepeatable read)로 이어진다.
+  트랜잭션 내의 한 지점에서 읽은 데이터는 트랜잭션 내의 다른 지점에서 읽은
+  데이터와 다를 수 있다. (오라클과 DB2 디폴트)
+* `TRANSACTION_READ_UNCOMMITTED` - 락으로 잠기지 않으므로 한 트랜잭션은 다른
+  트랜잭션 내에 작성된(하지만 커밋되지 않은) 데이터를 읽을 수 있다. 커밋되지
+  않은 읽기(dirty read)로 알려져 있다. 첫 번째 트랜잭션은 롤백되고 두 번째
+  트랜잭션은 틀린 데이터에서 일어나기 때문에 여기서 문제가 일어난다. (오라클
+  미지원)
+* `TRANSACTION_NONE` - (커밋 불가, 읽기 전용 쿼리)
+
+JPA에서는 엔터티별(물론 엔터티란 [적어도 일반적으로] 단순히 데이터베이스 내의
+ 열을 가리킨다)로 락 레벨을 명시할 수 있다. 락 레벨로 알맞게 얻는 건 매우 어려울
+ 수 있으므로 JDBC 구문 내에서 락을 수행하기보다 JPA를 이용하는 편이 더 쉽다.<br>
+JDBC 레벨에서 기본적으로 연결의 분리 레벨을 TRANSACTION_READ_UNCOMMITTED로
+ 설정하고 트랜잭션이 일어나는 동안 락으로 잠글 필요가 있는 데이터만 명시적으로
+ 잠근다. 이를 이루기 위한 SQL문은 비표준이다. 필요한 락 레벨을 맞추는 방법을
+ 확인하기 위해 데이터베이스 벤더의 문서를 살펴봐야 하지만 공통 구문은 FOR
+ UPDATE절을 포함한다. 이 종류의 락은 비관적인 락이라 불린다. 락 성능은 때론
+ 낙관적인 락을 사용해서 개선할 수 있으며 데이터에 접근할 때 경쟁하지 않는다면
+ 성능상의 큰 이득을 얻게 될 것이다. 데이터베이스에서 낙관적 병렬 수행은 버전
+ 칼럼으로 구현된다. 트랜잭션이 완료될 때가 되면 트랜잭션은 버전 칼럼을 갱신한다.
+ 문제의 열이 반복 읽기나 직렬화 구문을 필요로 하면 트랜잭션 동안 데이터를 읽기만
+ 하더라도 갱신되어야 한다. 커밋된 읽기 구문을 위해 버전 칼럼은 열 내의 다른
+ 데이터도 변경될 때만 갱신될 필요가 있다.<br>
+이를 제어하기 위해 JDBC 드라이버가 한 번에 얼마나 많은 열을 전송해야 하는지 알
+ 수 있다록 `PreparedStatement` 객체의 `setFetchSize()` 메서드를 쓰자. 이 디폴트
+ 값은 JDBC 드라이버마다 다양하다. 예를 들어 오라클의 JDBC 드라이버에서 디폴트
+ 값은 10이다.
+
+JPA는 엔터티 클래스의 바이트 코드를 변경해서 성능을 많이 개선한다. 일부 JPA
+ 구현체도 클래스들이 JVM으로 로드되면서 바이트 코드를 동적으로 개선하기 위한
+ 방법을 제공한다.<br>
+간단한 네임드 쿼리를 사용하는 편이 데이터를 로드하기 더 빠를 것 같더라도
+ 엔티티가 `find()` 메서드에 대한 호출을 통해 L2 캐시로 로드되면 장기적으로 무슨
+ 일이 일어날지 고려하자.
+
 ## 12. 자바 SE API 팁
+
+자바 7 이전의 문제는 클래스를 로드하는 메서드가 동기화됐다는 점이었다. 이런
+ 이유로 해서 JDK6 동작은 `-XX:+AlwaysLockClassLoader` 플래그를 이용해서 활성화할
+ 수 있다.
+
+`Random`과 `ThreadLocalRandom` 클래스의 차이점은 `Random` 클래스의 주요 동작이
+ 동기화된다는 것이다. 이 클래스들과 `SecureRandom` 클래스 간의 차이는 사용하는
+ 알고리즘에 있다. 이와 같은 애플리케이션에서 성능 테스트를 수행할 때 타이밍은
+ 매우 변동이 심하다는 점을 인식하고 있어야 한다.
+
+가능한 한 가장 빠른 코드를 작성하는 데 관시이 있다면 JNI를 피하는 게 좋다.<br>
+흥미롭게도 반대는 사실이 아니라고 할 수 있다. C 코드에서 자바로 다시 호출하는
+ 경우는 큰 성능상의 불이익을 주지 않는다. JNI 코드는 관련 매개 변수가 단순한
+ 기본형이 아니라면 더 나쁘게 동작한다. 자바에서 C로 호출하면 C 함수로 대상
+ 객체를 명시적으로 넘긴다. C에서 자바를 호출할 때는 객체를 넘기지 않는다. 배열
+ 형태의 데이터 처리는 네이티브 코드에서 특별히 다룰 대상이다. 배열이 고정된 동안
+ 가비지 컬렉터는 동작할 수 없으므로 JNI 코드 내에서 가장 비용이 비싼 실수 중의
+ 하나는 오래 동작하는 코드 내의 문자열이나 배열을 고정하는 것이다.
+
+성능상의 이슈는 스택 트레이스를 처리하는 데서 오므로
+ `-XX:-StackTraceInThrowable` 플래그로 스택 트레이스 생성이 비활성화되도록
+ 설정할 수 있지만, 좋은 생각이 아니다. 코드에서 실제로 스택 트레이스를 조사하고
+ 거기에서 발견된 사항을 기반으로 한 예외를 해결할 방법을 결정한다. (CORBA의 참조
+ 구현체는 이처럼 동작한다.) 이 자체는 문제가 많지만 스택 트레이스를 비활성화시킨
+ 결과로 인해 이상하게 코드가 깨질 수 있다.
+
+`AggressiveOpts` 플래그는 기본적인 자바 SE 기능 중 동작 몇 개에 영향을 준다. 이
+ 플래그의 목적은 시험 삼아서 최적화를 도입하는 것이다. `AggressiveOpts` 플래그
+ 사용에 따른 주요 영향은 기본 JDK 클래스 몇 개를 다른 구현체로 대체한다는
+ 것이다. 특히 `java.math` 패키지의 `BigDecimal`, `BigInteger`와
+ `MutableBigDecimal` 클래스, `java.text` 패키지의 `DecimalFormat`,
+ `DigitalList`(?)와 `NumberFormat` 크래스, `java.util` 패키지의 `HashMap`,
+ `LinkedHashMap`와 `TreeMap` 클래스가 그 대상이다. 자바 8에서 베이스 JDK
+ 클래스에 통합되거나 다른 방식으로 개선되면서 이 대체 구현체는 제거됐다.
+ `AggressiveOpts` 플래그를 설정하면 `AutoFill` 플래그를 사용할 수 있는데,
+ JDK7에서 7u4까지 디폴트는 `false`다. 이 플래그는 컴파일러가 루프 최적화를 더
+ 잘할 수 있게 해준다. 마찬가지로 이 플래그는 `DoEscapeAnalysis` 플래그(JDK 7u4
+ 이후 버전에서 디폴트로 설정)도 활성화시킨다. `AutoBoxCacheMax` 플래그(디폴트 값
+ 128)는 20,000까지 설정되고 더 많은 값이 오토박싱되게 하며 (메모리를 약간 더
+ 사용하는 대신) 특정 애플리케이션에서 성능을 약간 높일 수 있다.
+ `BiasedLockingStartupDelay`의 값은 디폴트인 2,000에서 500까지 줄일 수 있으며
+ 이건 편향된 락이 애플리케이션이 수행되기 시작한 후 바로 시작한다는 의미다.
+ 마지막으로 이 플래그는 `OptimizeStringConcat` 플래그를 사용할 수 있는데,
+ `OptimizeStringConcat` 플래그를 사용할 수 있다면 JVM 저스트 인 타임 컴파일러는
+ `StringBuilder` 객체 자체의 생성을 최적화할 수 있다. `OptimizeStringConcat`
+ 플래그는 7u4부터 디폴트가 `true`이다.
+
+결국에 성능이 동일하므로 람다를 위한 코드를 살펴보면 익명 클래스를 생성하기 위한
+ 간편 문법이라는 결론을 내리는 것이 당연하다. 하지만 실제로는 그렇게 돌아가지
+ 않으며 람다를 위한 코드는 JDK 8 내의 특별한 헬퍼 클래스를 통해 호출되는 스태틱
+ 메서드를 생성한다. 익명 클래스는 실제 자바 클래스로, 개별 클래스 파일을 갖고
+ 있고 클래스로더에서 로드된다.
 
 ## Appendix A. 튜닝 플래그 요약
 
